--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -1,13 +1,37 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .nav {
-    background-color: #383737;
+  background-color: #383737;
 }
 
 .nav-dropdown {
-    color: #fff;
-    text-decoration: none;
-    display: inline-block;
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  padding: 20px;
+  position: relative;
+}
+
+.dropdown-menu {
+  display: none;
+}
+.nav-dropdown:hover > .dropdown-menu {
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #33b8fa;
+}
+.menu-list {
+  margin: 0;
+  padding: 0;
+}
+.menu-list > li {
+  list-style-type: none;
+  padding: 20px;
+}
+.menu-list > li:hover {
+  background-color: rgb(6, 118, 230);
 }
