--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,49 @@
 h3 {
   margin-bottom: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+.facts {
+  border-spacing: 0;
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  border-radius: 4px;
+  border: 1px solid lightgray;
+}
+th {
+  text-align: left;
+}
+td,
+th {
+  padding: 10px;
+}
+tr:nth-child(even) {
+  background-color: lightgrey;
+}
+.links {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+}
+.links > li {
+  list-style-type: none;
+  flex: 1;
+  margin-right: 20px;
+}
+.links a {
+  text-decoration: none;
+  color: white;
+  background-color: rgb(0, 110, 200);
+  padding: 20px;
+  display: inline-block;
+  text-align: center;
+  box-sizing: border-box;
+  width: 100%;
+}
+.links li:last-child {
+  margin-right: 0;
+}
